--- a/app/globals.css
+++ b/app/globals.css
@@ -121,3 +121,80 @@
     @apply bg-background text-foreground;
   }
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-pagination-bullet {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: space-between;
+  height: 90px !important;
+  border-radius: 0 !important;
+  /* чтобы была отступ под линию */
+  opacity: 1;
+  background: none !important;
+  cursor: pointer;
+}
+
+.swiper-pagination-bullet span {
+  color: rgba(17, 17, 17, 0.3);
+  /* текст неактивный */
+  font-size: 14px;
+  line-height: 1.2;
+  transition: color 0.3s ease;
+}
+
+.swiper-pagination-bullet-active span {
+  color: rgba(0, 0, 0, 1);
+  /* активный текст */
+}
+
+/* Серая линия */
+.swiper-pagination-bullet i {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100% !important;
+  height: 4px;
+  background-color: rgba(17, 17, 17, 0.3);
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+/* Прогресс-линия */
+.swiper-pagination-bullet b {
+  display: block;
+  height: 4px;
+  width: 0%;
+  background-color: rgba(17, 17, 17, 1);
+  transition: width 0.3s ease;
+}
+
+.swiper-pagination-bullet-active b {
+  animation: countingBar 10s ease-in forwards;
+}
+
+@keyframes countingBar {
+  0% {
+    width: 0;
+  }
+
+  100% {
+    width: 100%;
+  }
+}
