feature(app) - full-application, added responsible design

--- a/app/globals.css
+++ b/app/globals.css
@@ -122,6 +122,15 @@
   }
 }
 
+html {
+  scroll-snap-type: y mandatory;
+}
+
+/* width */
+::-webkit-scrollbar {
+  display: none;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -130,8 +139,6 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-
-  /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -197,4 +204,9 @@
   100% {
     width: 100%;
   }
+}
+
+input[type="tel"] {
+  height: 48px;
+  border-radius: var(--radius-md);
 }
