--- a/app/globals.css
+++ b/app/globals.css
@@ -43,6 +43,11 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
+
+.font-mona_sans {
+  font-family: var(--font-mona) !important
+}
+
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
@@ -120,6 +125,10 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+:root {
+  --index: calc(1vw + 1vh);
 }
 
 html {
